# temperatures

./: .gitignore  LICENSE  stack.yaml  temperatures.cabal  testdata.csv
app/: Main.hs
src/: Lib.hs  TimeMap.hs
test/: Spec.hs
