name:                temperatures
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/MarkZander/temperatures#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Zander
maintainer:          mark.of.zander@icloud.com
copyright:           Mark Zander
category:            Application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , TimeMap
  build-depends:       base >= 4.7 && < 5
                     , time
                     , containers
  default-language:    Haskell2010

executable temperatures-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , temperatures
                     , bytestring
                     , vector
                     , cassava
                     , time
                     , semigroups
                     , containers
                     , directory
                     , turtle
                     , foldl
                     , text
  default-language:    Haskell2010

test-suite temperatures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , temperatures
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarkZander/temperatures
